--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ jobs:
             python setup.py test
 
   deploy:
+    branches:
+      only:
+        - master
     docker:
       - image: circleci/python:3.6
     steps:
@@ -36,20 +39,3 @@ jobs:
           command: |
             pip install twine
             twine upload dist/*
-
-workflows:
-  version: 2
-  build_and_deploy:
-    jobs:
-      - build:
-          filters:
-            tags:
-              only: /.*/
-      - deploy:
-          requires:
-            - build
-          filters:
-            tags:
-              only: /[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
