--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,11 @@ jobs:
       - image: circleci/python:3.6
     steps:
       - checkout
-
       - run:
           name: run tests
           command: |
             python setup.py test
-
   deploy:
-    branches:
-      only:
-        - master
     docker:
       - image: circleci/python:3.6
     steps:
@@ -39,3 +34,20 @@ jobs:
           command: |
             pip install twine
             twine upload dist/*
+
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /.*/
+      - deploy:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
